{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "General_Controller",
            "id": "8532f50b-2ae6-4045-8c12-0235a58c64c8",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "a9beb59c-e406-4822-aecb-996a848bfeb9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "f9d5c7a0-3faa-4153-9e0f-d982372e5ed8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "e74076da-16b9-4eea-9a60-6bd738fe5a7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "dd830a28-fcd4-4c2c-b482-c69db5e6ba12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "a5ca780c-80c9-4754-95ca-7426c6be2800",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "06617fc2-e333-4a87-a574-720fa5f70d48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f91fe85-d1de-4a26-80c1-cebb6b84be88",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e0f4b72-337d-4d7e-b17e-0d53ca2bcb9a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86795a4a-ddb9-4e50-8b1d-54caf1f9e8a4",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5759c97c-d984-41b9-8794-e61018c59871",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9a52035-7c5a-43ed-bdcf-9261295baf79",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f22ce8c-578c-40e8-92cd-4c709ab9c0d9",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}